# bamboopass

./: .gitignore  README.md  bamboopass_entry.py  pyproject.toml  semantic-release.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  tag-main.yml
assets/icons/: icon.icns
assets/images/: banner.xcf
bamboopass/: __init__.py  __main__.py  android_link.py  app.py  constants.py  crypto.py  storage.py  version.py
bamboopass/ui/: icons.py  main_window.py  settings_window.py
bamboopass/utils/: colors.py
donate/: BTC.md  ETH.md  README.md
tests/: test_crypto.py
